--- a/src/test/resources/configuration.properties
+++ b/src/test/resources/configuration.properties
@@ -1,3 +1,9 @@
+# Type of browser to use for testing
 browser = chrome
+
+# Whether to run tests in headless mode (without a GUI)
 headless = false
+
+# Base URL of the application being tested
 baseURL = http://localhost:3000/articles.html
+
