--- a/pom.xml
+++ b/pom.xml
@@ -25,5 +25,11 @@
             <artifactId>selenium-java</artifactId>
             <version>4.24.0</version>
         </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.4.11</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
