--- a/src/test/resources/configuration.properties
+++ b/src/test/resources/configuration.properties
@@ -7,3 +7,8 @@ headless = false
 # Base URL of the application being tested
 baseURL = http://localhost:3000/articles.html
 
+# Logging configuration
+# Available logging levels: TRACE, DEBUG, INFO, WARN, ERROR
+logging.level.root=ERROR
+logging.pattern.console=%d{HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n
+
