Reverted to .xml configuration for Logback. All works good

--- a/src/test/resources/configuration.properties
+++ b/src/test/resources/configuration.properties
@@ -9,6 +9,8 @@ baseURL = http://localhost:3000/articles.html
 
 # Logging configuration
 # Available logging levels: TRACE, DEBUG, INFO, WARN, ERROR
-logging.level.root=ERROR
+logging.level.root=INFO
+
+# Logging pattern for console output, logs will be displayed in the console and not in any file
 logging.pattern.console=%d{HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n
 
