--- a/pom.xml
+++ b/pom.xml
@@ -40,5 +40,11 @@
             <version>1.4.11</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>1.4.11</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
