--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Main",
+            "request": "launch",
+            "mainClass": "Main",
+            "projectName": "selenium-course"
+        },
+        {
+            "type": "java",
             "name": "Run JUnit Tests",
             "request": "launch",
             "mainClass": "",
