Parallelism tweaked, helpers logs changed to debug level

--- a/src/test/resources/junit-platform.properties
+++ b/src/test/resources/junit-platform.properties
@@ -1,5 +1,14 @@
+# Enable parallel test execution
 junit.jupiter.execution.parallel.enabled=true
-junit.jupiter.execution.parallel.mode.default=concurrent
+
+# Default mode for methods within a test class - runs in same thread
+junit.jupiter.execution.parallel.mode.default=same_thread
+
+# Default mode for test classes - runs concurrently
 junit.jupiter.execution.parallel.mode.classes.default=concurrent
+
+# Use fixed thread pool strategy for parallel execution
 junit.jupiter.execution.parallel.config.strategy=fixed
-junit.jupiter.execution.parallel.config.fixed.parallelism=3
+
+# Set number of concurrent threads (max number of tests that can run at the same time)
+junit.jupiter.execution.parallel.config.fixed.parallelism=2
