Added allure reporting

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@ buildNumber.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
 .idea
+
+# Ignore all Allure files
+allure-results/
+allure-report/
+.allure/
