--- a/src/test/resources/configurations/configuration.properties
+++ b/src/test/resources/configurations/configuration.properties
@@ -5,5 +5,5 @@ browser = chrome
 headless = false
 
 # Base URL of the application being tested
-baseURL = http://localhost:3000/articles.html
+baseURL = http://192.168.10.159:3000/articles.html
 
